--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "D:\\Programs\\Anaconda3\\envs\\ai_python\\python.exe"
+    "python.pythonPath": "/home/nikemr/anaconda3/envs/deep-learning/bin/python",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
